manifests/api.yml
apiVersion: v1
kind: Namespace
metadata:
    name: sysstats
    labels:
        app: sysstats

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sysstats-api
    namespace: sysstats
    labels:
        app: sysstats-api
        type: back-end
spec:
    replicas: 1
    selector:
        matchLabels:
            app: sysstats-api
            type: back-end
    template:
        metadata:
            name: sysstats-api-pod
            labels:
                app: sysstats-api
                type: back-end
        spec:
            containers:
                - name: sysstats-api
                  image: techieguy007/images:sysstats-api
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
    name: sysstats-api-service
    labels:
        svc: sysstats-api
spec:
    type: NodePort
    ports:
        - protocol: TCP
          port: 5000
          targetPort: 5000
          nodePort: 30081
    selector:
        app: sysstats-api
        type: back-end
