manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sysstats-ingress
    namespace: sysstats
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/default-backend: sysstats-client-service
spec:
    rules:
        - host: sysstats-stats.info
          http:
              paths:
                  - path: "/stats"
                    pathType: Prefix
                    backend:
                        service:
                            name: sysstats-api-service
                            port:
                                number: 5000
                  - path: "/"
                    pathType: Prefix
                    backend:
                        service:
                            name: sysstats-client-service
                            port:
                                number: 80
